# Capstone_project

./: .gitignore  README.md  USER_STORIES.md  pyproject.toml  requirements.txt
notebooks/: Test.ipynb
scripts/: run_etl.py
src/extract/: EXTRACT.md  create_file_list.py  extract.py  extract_files_into_df.py
src/load/: LOAD.md  load.py
src/streamlit/: app.py
src/streamlit/pages/: 1_🐋_ Cetacean_Olympics.py  2_🌍_Global_whale_view.py  3_🌍_Global_whale_view_reduced.py  4_🎞️_Animated_path.py  5_🔥_Whale_Heatmap.py  6_🗑️_Depreciated_graphs.py
src/transform/: TRANSFORM.md  clean_data.py  create_new_df.py  transform.py
src/utils/: logging_utils.py
tests/component_tests/: test_extract_data.py  test_transfrom_data.py
tests/e2e_tests/: test_etl_pipline.py
tests/unit_tests/: test_clean_data.py  test_create_new_df.py  test_data_dict_creation.py  test_extraction.py  test_file_extraction.py  test_load_function.py  test_logging_utils.py  test_transformation.py
