[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ETL-Project-Walkthough"
version = "0.1.0"
description = "An ETL project for extracting, transforming, and loading data."
authors = [{name = "Alex", email = "alex.j.irvine@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/AlexIrvine/Capstone_project.git"

[project.scripts]
run_app = "src.streamlit.app:main"
run_tests = "tests.run_tests:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}